--- a/nativedialogs.html
+++ b/nativedialogs.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <title>Simple Dialogs</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.0.1/purify.min.js"></script>
     </head>
     <body>
