Add styled crud and update index.html

--- a/styledcrud.html
+++ b/styledcrud.html
@@ -3,7 +3,6 @@
     <head>
         <title>Styled Crud</title>
         <link rel="stylesheet" href="styledcrud.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/fontawesome.min.css">
     </head>
     <body>
         <h1>BLOG POSTS</h1>
@@ -48,8 +47,8 @@
             </form>
         </dialog>
         <script type="module" src="styledblog.js"></script>
-        <script type="module" src="add.js"></script>
-        <script type="module" src="edit.js"></script>
-        <script type="module" src="delete.js"></script>
+        <script type="module" src="styledadd.js"></script>
+        <script type="module" src="stylededit.js"></script>
+        <script type="module" src="styleddelete.js"></script>
     </body>
 </html>
