--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-SY0SFX9H98"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-SY0SFX9H98');
+</script>
+
+
 <body class="container">
     <header id="home">
         <nav>
